# stamp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-HIPPO.md  README.md
src/: error.rs  main.rs
src/core/: fetch.rs  mod.rs  render.rs  uri.rs
tests/: main.rs  util.rs
tests/fixtures/expected/test_docs_example/: index.html
tests/fixtures/source/test_docs_example/: stamp.yaml
tests/fixtures/source/test_minimal/: stamp.yaml
